Massive upgrade to support Kenna API

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 results/
+kenna-data.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,pycharm
